# nebby

./: .gitignore  Cargo.toml  README.md  TODO.md  build.sh  makefile  nebbybuild.sh
.github/workflows/: rust_tester.yml
src/: excel_file_functions.rs  lib.rs  local_file_functions.rs  main.rs  remote_file_functions.rs
src/api/: mod.rs
src/bytes/: bytes.rs  mod.rs
src/csv/: mod.rs
src/delta_lake/: mod.rs
src/excel/: excel.rs  mod.rs
src/json/: json.rs  mod.rs
src/parquet/: mod.rs  parquet.rs
src/processor/: mod.rs  processor.rs
src/utils/: utils.rs
tests/: api_tests.rs  bytes_tests.rs  csv_tests.rs  excel_tests.rs  exqs_tests.rs  file_read_tests.rs  reqwest_tests.rs  test_file.xlsx
