[package]
name = "nebby"
version = "0.1.3"
edition = "2021"

# Author and License Information
authors = ["chris@enmeshed.dev"]
license = "MIT"
repository = "https://github.com/CHRISCARLON/nebby"

[[bin]]
name = "nebb"
path = "src/main.rs"

[dependencies]
calamine = "0.25.0"
comfy-table = "7.1.0"
clap = { version = "4.5.7", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
colored = "2.1.0"
serde = "1.0.207"
serde_json = "1.0.124"
indicatif = "0.17.8"
bytes = "1.7.2"
csv = "1.3.0"

[lib]
name = "nebby"
path = "src/lib.rs"
