[package]
name = "nebby"
version = "0.1.4"
edition = "2021"

# Author and License Information
authors = ["chris@enmeshed.dev"]
license = "MIT"
description = "Nebby is a command-line tool designed to quickly review basic information about a range of different file formats. It provides various commands to interact with Excel, JSON, and CSV files - with more to come!"
repository = "https://github.com/CHRISCARLON/nebby"
keywords = ["file-scanner", "data-analysis"]

[[bin]]
name = "nebb"
path = "src/main.rs"

[dependencies]
calamine = "0.25.0"
comfy-table = "7.1.0"
clap = { version = "4.5.7", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
colored = "2.1.0"
serde = "1.0.207"
serde_json = "1.0.124"
indicatif = "0.17.8"
bytes = "1.7.2"
csv = "1.3.0"
aws-config = "1.5.8"
aws-credential-types = "1.2.0"
aws-sdk-sts = "1.39.0"
aws-types = "1.3.3"
deltalake = { version = "0.20.1", features = [
    "s3",
    "datafusion",
    "datafusion-ext",
] }
deltalake-aws = "0.3.0"
tokio = { version = "1.39.3", features = ["full"] }

[lib]
name = "nebby"
path = "src/lib.rs"
